--- a/src/scss/var.scss
+++ b/src/scss/var.scss
@@ -4,3 +4,39 @@ $red-var: #BF1304;
 $red2-var: #730202;
 $wine-var: #400101;
 $black-var: #0D0D0D;
+
+
+@mixin redirectBtn() {
+    padding: 10px 25px;
+    text-transform: uppercase;
+    background-color: #BF1304;
+    color: white;
+    font-weight: bold;
+    border-radius: 7px;
+    border: 2px solid #730202;
+    cursor: pointer;
+    transition: .5s;
+    &:hover{
+        background-color: darken($color: #730202, $amount: 10);
+    }
+}
+
+@mixin headerStyle {
+    height: 150px;
+    background-color: black;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    & a {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        color: $red-var;
+        font-weight: bold;
+        text-decoration: none;
+        font-size: 20px;
+        text-transform: uppercase;
+    }
+}
